maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    while(getY()!=0 || getY() = HauteurMonde()-1){
                    ^Escaper:4: error: not found: value HauteurMonde
    while(getY()!=0 || getY() = HauteurMonde()-1){
                                ^